feat: SSO 통합을 위한 JWT Resource Server 전환
- JWT 토큰 검증 Provider 및 Filter 추가
- SecurityConfig를 Stateless JWT 방식으로 변경
- CSRF, Form Login, OAuth2 관련 코드 제거
- Redis Pub/Sub 이벤트 구독 구현 (SSO 사용자 동기화)
- UserProvider 엔티티 및 관련 코드 제거
- JJWT 라이브러리 의존성 추가

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>